--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Sonnenseite</title>
+<title>Café Bar Sonnenseite</title>
+<style>
+		* { margin: 0; padding: 0; }
+		html { 
+			background: url(img/wand.png) no-repeat center center fixed; 
+			-webkit-background-size: cover;
+			-moz-background-size: cover;
+			-o-background-size: cover;
+			background-size: cover;
+		}
+		div.fixed {
+			background: url(img/logo_sonnenseite_shadow.png); 
+			position: fixed;
+			top: 0;
+			left: 0;
+			width: 224px;
+			height: 90px;
+		}
+</style>
 </head>
-
 <body>
-Hallo Hier steht bald was!
+<div class="fixed"></div>
 </body>
 </html>
