--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 						<li style="padding-top: 5px;padding-bottom: 5px;padding-right: 15px;"><a href="#footer"><i class="bi bi-info bi-size";></i> Impressum</a></li> 
 					</ul>  
 				</li>
-				<li><a href="#myPage"><span id="glyphicon"; class="bi bi-instagram glyphicon_size";></span></a></li>
-				<li><a href="#myPage"><span id="glyphicon"; class="bi bi-twitter glyphicon_size";></span></a></li>
+				<li><a href="https://www.instagram.com/sonnenseitehamburg/"><span id="glyphicon"; class="bi bi-instagram glyphicon_size";></span></a></li>
+				<li><a href="https://twitter.com/barsonnenseite?lang=de"><span id="glyphicon"; class="bi bi-twitter glyphicon_size";></span></a></li>
 			</ul>
 		</div>
 	</div>
