--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 <div class="modal fade" id="myimp" role="dialog">
 	<div class="modal-dialog">
 		<div class="modal-content">
-			<div class="modal-imp-header"><span id="close-imp" class="close" data-dismiss="modal">x</span></div>
+			<div class="modal-imp-header"><span id="close-imp" class="close glyphicon glyphicon-remove glyphicon-remove-red" data-dismiss="modal"></span></div>
 			<!--Copy Text-->
 			<div class="modal-imp-body">
 				<h6>Impressum</h6>
