--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="#myPage"><span id="glyphicon"; class="bi bi-house-door-fill glyphicon_size";</span></a></li>
+				<li><a href="#" data-toggle="modal" data-target="#reser_warn" style="padding-top: 17px;outline:none">Resrevieren</a></li>
 				<li><a href="#band" style="padding-top: 17px;">Wir</a></li>
 				<li><a href="#tour"style="padding-top: 17px;outline:none">Karte</a></li>
 			<!--<li><a href="#contact">Kontakt</a></li>-->
@@ -165,7 +166,23 @@
   </div>
   </div>
 <!-- Footer -->
-
+<!-- Reservieren-->
+<div class="modal fade" id="reser_warn" role="dialog">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-imp-header"><span id="close-imp" class="close" data-dismiss="modal">x</span></div>
+			<div class="modal-imp-body">
+				<h6>Resrevierung</h6>
+				<div class="modal-imp-body-text">„Laut Bundesbeschluß vom 12.03.2012, dürfen wir die Tische nur nach vorheriger Reservierung vergeben.
+				Dafür nutzen wir das Tool von <a href="https://www.aleno.me/de/" target="_blank">aleno.me</a>
+				</div>
+			</div>		
+			<div class="modal-footer"><button type="submit" class="btn-modal btn-default pull-right" onclick="window.location.href = 'https://mytools.aleno.me/reservations/v2.0/reservations.html?k=eyJrIjoid2l2dTVrM2lsNm15cnBiOWlwdzZ4bmViajhycnVkaWRpZ280bGZwODBsbzlhNGlweTEiLCJyIjoiTmdaekR6UExBWmdlTlFDY1IiLCJzIjoiaHR0cHM6Ly9teXRvb2xzLmFsZW5vLm1lLyJ9';" target="_blank" data-dismiss="modal">
+			<span class="glyphicon glyphicon-remove glyphicon-remove-red"></span> Reservieren</button>
+			</div>
+		</div>
+	</div>
+</div> 
 <!-- copyright-->
 <div class="modal fade" id="mycopy" role="dialog">
 	<div class="modal-dialog">
