--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="#myPage"><span id="glyphicon"; class="bi bi-house-door-fill glyphicon_size";</span></a></li>
-				<li><a href="#" data-toggle="modal" data-target="#reser_warn" style="padding-top: 17px;outline:none">Resrevieren</a></li>
+				<li><a href="#" data-toggle="modal" data-target="#reser_warn" style="padding-top: 17px;outline:none">Reservieren</a></li>
 				<li><a href="#band" style="padding-top: 17px;">Wir</a></li>
 				<li><a href="#tour"style="padding-top: 17px;outline:none">Karte</a></li>
 			<!--<li><a href="#contact">Kontakt</a></li>-->
@@ -172,8 +172,8 @@
 		<div class="modal-content">
 			<div class="modal-imp-header"><span id="close-imp" class="close" data-dismiss="modal">x</span></div>
 			<div class="modal-imp-body">
-				<h6>Resrevierung</h6>
-				<div class="modal-imp-body-text">„Laut Bundesbeschluß vom 12.03.2012, dürfen wir die Tische nur nach vorheriger Reservierung vergeben.
+				<h6>Reservierung</h6>
+				<div class="modal-imp-body-text">„Laut Beschluß vom 12.03.2012, dürfen wir die Tische nur noch nach vorheriger Reservierung vergeben.
 				Dafür nutzen wir das Tool von <a href="https://www.aleno.me/de/" target="_blank">aleno.me</a>
 				</div>
 			</div>		
